fix math formatting

--- a/README.html
+++ b/README.html
@@ -200,7 +200,7 @@ $(document).ready(function () {
 <div id="part-1-simulation-exercise-instructions" class="section level4">
 <h4>Part 1: Simulation Exercise Instructions</h4>
 <p>Investigate an exponential distribution in R and compare it with the Central Limit Theorem (CLT). The exponential distribution will be simulated in R with <code>rexp(n, lambda)</code> where lambda is the rate parameter.</p>
-<p>The mean of the exponential distribution is <span class="math inline">\(\frac{1}{\lambda}\)</span> and the standard deviation is also <span class="math inline">\(\frac{1}{\lambda}\)</span>. Lambda will be set to <span class="math inline">\(\lambda = 0.2\)</span> for all of the simulations. An investigation will be performed on the distribution of averages of 40 exponentials for one thousand simulations.</p>
+<p>The mean of the exponential distribution is <code>1/lambda</code> and the standard deviation is also <code>1/lambda</code>. Lambda will be set to <code>lambda = 0.2</code> for all of the simulations. An investigation will be performed on the distribution of averages of 40 exponentials for one thousand simulations.</p>
 <p>Illustrate via simulation and associated explanatory text the properties of the distribution of the mean of 40 exponentials.</p>
 <p>Use RStudio and knitr to create a report in PDF format to:</p>
 <ol style="list-style-type: decimal">
