--- a/tooth-growth-analysis.html
+++ b/tooth-growth-analysis.html
@@ -486,6 +486,16 @@ paste0(&quot;p-value = &quot;, round(t4$p.value, 4))</code></pre>
 </div>
 <div id="conclusion" class="section level2">
 <h2>Conclusion</h2>
+<p>This analysis employed the use of statistical inference to compare the effects of different doses of vitamin C using two delivery methods to study the tooth growth in guinea pigs.</p>
+<div id="conclusions" class="section level3">
+<h3>Conclusions</h3>
+<p>Based on exploratory data analysis and configured by hypothesis tests and the associated confidence intervals, …</p>
+<p><em>Pending</em></p>
+</div>
+<div id="assumptions" class="section level3">
+<h3>Assumptions</h3>
+<p><em>Pending</em></p>
+</div>
 </div>
 
 
