add conclusion and assumptions

--- a/tooth-growth-analysis.html
+++ b/tooth-growth-analysis.html
@@ -292,7 +292,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">Statistical Inference Course Project (Part 2)</h1>
 <h4 class="author">Jeffrey M. Hunter</h4>
-<h4 class="date">11 May, 2019</h4>
+<h4 class="date">12 May, 2019</h4>
 
 </div>
 
@@ -486,15 +486,19 @@ paste0(&quot;p-value = &quot;, round(t4$p.value, 4))</code></pre>
 </div>
 <div id="conclusion" class="section level2">
 <h2>Conclusion</h2>
-<p>This analysis employed the use of statistical inference to compare the effects of different doses of vitamin C using two delivery methods to study the tooth growth in guinea pigs.</p>
-<div id="conclusions" class="section level3">
-<h3>Conclusions</h3>
-<p>Based on exploratory data analysis and configured by hypothesis tests and the associated confidence intervals, …</p>
-<p><em>Pending</em></p>
-</div>
+<p>This analysis employed the use of statistical inference to compare the effects of different dosage levels of vitamin C using two delivery methods to study the tooth growth in guinea pigs.</p>
 <div id="assumptions" class="section level3">
 <h3>Assumptions</h3>
-<p><em>Pending</em></p>
+<ul>
+<li><p>Tooth growth follows a normal distibution.</p></li>
+<li><p>The two variables, dosage levels and delivery method, must be independent and identicaly distributed.</p></li>
+<li><p>No other confounding factors were included that would effect tooth growth.</p></li>
+<li><p>The population was comprised of similar guinea pigs.</p></li>
+</ul>
+</div>
+<div id="conclusions" class="section level3">
+<h3>Conclusions</h3>
+<p>Based on exploratory data analysis and confirmed by hypothesis tests and associated confidence intervals, we can safely conclude that an increase in dosage levels of vitamin C increases tooth growth. However, when studying tooth growth as a function of both dosage level and delivery method, it is inconclusive whether or not the delivery method had any effect on tooth growth. While it started to appear that orange juice was more effective than ascorbic acid, this only occurred at dosage levels of 0.5 to 1 mg/day. At 2 mg/day, both delivery methods were equally as effective.</p>
 </div>
 </div>
 
